--- a/app/src/main/res/layout/post.xml
+++ b/app/src/main/res/layout/post.xml
@@ -22,6 +22,7 @@
             android:text="옷등록"/>
 
         <ImageView
+            android:id="@+id/c_img_post"
             android:layout_marginTop="20dp"
             android:layout_width="160dp"
             android:layout_height="160dp"
@@ -41,7 +42,7 @@
             android:layout_height="wrap_content" />
 
         <TextView
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:text="옷 이름"
@@ -50,10 +51,11 @@
             android:id="@+id/c_name_post"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:text=""
             android:hint="옷 이름을 입력해주세요."/>
 
         <TextView
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:text="옷 브랜드"
@@ -62,32 +64,62 @@
             android:id="@+id/c_brand_post"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:text=""
             android:hint="브랜드 이름을 입력해주세요."/>
 
-        <TextView
-            android:layout_marginTop="10dp"
+        <LinearLayout
+            android:layout_marginTop="20dp"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:text="옷 종류"
-            android:textSize="20dp" />
-        <Spinner
-            android:id="@+id/c_type_post"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:text="옷 종류"
+                android:textSize="20dp" />
+            <EditText
+                android:id="@+id/c_type_post_add"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:visibility="invisible"
+                android:text=""
+                android:hint="종류 입력"/>
+            <Spinner
+                android:id="@+id/c_type_post"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_marginTop="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:text="옷 사이즈"
+                android:textSize="20dp" />
+            <EditText
+                android:id="@+id/c_size_post_add"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:visibility="invisible"
+                android:text=""
+                android:hint="사이즈 입력"/>
+            <Spinner
+                android:id="@+id/c_size_post"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"/>
+        </LinearLayout>
 
         <TextView
-            android:layout_marginTop="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:text="옷 사이즈"
-            android:textSize="20dp" />
-        <Spinner
-            android:id="@+id/c_size_post"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:text="메모"
@@ -96,11 +128,12 @@
             android:id="@+id/c_memo_post"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:text=""
             android:hint="메모를 입력해주세요."/>
 
         <Button
             android:layout_marginTop="20dp"
-            android:id="@+id/btnPost"
+            android:id="@+id/cloth_post"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="등록"/>
