--- a/app/src/main/res/layout/cody.xml
+++ b/app/src/main/res/layout/cody.xml
@@ -40,10 +40,6 @@
             android:src="@drawable/setting" />
     </LinearLayout>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#000000" />
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="0dp"
@@ -54,15 +50,7 @@
             android:text="코디"
             android:textSize="25dp"
             android:gravity="center"/>
-        <View
-            android:layout_width="1dp"
-            android:layout_height="50dp"
-            android:background="#000000"/>
     </LinearLayout>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#000000" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -115,6 +103,7 @@
                     android:layout_marginLeft="15dp"
                     android:layout_marginTop="15dp"
                     android:layout_weight="1"
+                    android:background="#00ff0000"
                     android:padding="50dp" />
 
                 <ImageButton
@@ -125,6 +114,7 @@
                     android:layout_marginLeft="15dp"
                     android:layout_marginTop="15dp"
                     android:layout_weight="1"
+                    android:background="#00ff0000"
                     android:padding="50dp" />
 
                 <ImageButton
@@ -135,6 +125,7 @@
                     android:layout_marginLeft="15dp"
                     android:layout_marginTop="15dp"
                     android:layout_weight="1"
+                    android:background="#00ff0000"
                     android:padding="50dp"
                     />
 
@@ -150,8 +141,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:layout_marginLeft="15dp"
-                    android:layout_marginRight="15dp"
-                    android:text="태그123123123" />
+                    android:layout_marginRight="15dp" />
 
                 <TextView
                     android:id="@+id/clothTag2"
@@ -160,7 +150,6 @@
                     android:layout_marginLeft="15dp"
                     android:layout_marginRight="15dp"
                     android:layout_weight="1"
-                    android:text="태그"
                     android:padding="0dp" />
 
                 <TextView
@@ -170,7 +159,6 @@
                     android:layout_marginLeft="15dp"
                     android:layout_marginRight="15dp"
                     android:layout_weight="1"
-                    android:text="태그"
                     android:padding="0dp" />
 
             </LinearLayout>
@@ -186,6 +174,7 @@
                     android:layout_marginLeft="15dp"
                     android:layout_marginTop="15dp"
                     android:layout_weight="1"
+                    android:background="#00ff0000"
                     android:padding="50dp" />
 
                 <ImageButton
@@ -196,6 +185,7 @@
                     android:layout_marginLeft="15dp"
                     android:layout_marginTop="15dp"
                     android:layout_weight="1"
+                    android:background="#00ff0000"
                     android:padding="50dp" />
 
                 <ImageButton
@@ -206,6 +196,7 @@
                     android:layout_marginLeft="15dp"
                     android:layout_marginTop="15dp"
                     android:layout_weight="1"
+                    android:background="#00ff0000"
                     android:padding="50dp" />
 
             </LinearLayout>
@@ -219,8 +210,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:layout_marginLeft="15dp"
-                    android:layout_marginRight="15dp"
-                    android:text="태그123123123" />
+                    android:layout_marginRight="15dp" />
 
                 <TextView
                     android:id="@+id/clothTag5"
@@ -229,7 +219,6 @@
                     android:layout_marginLeft="15dp"
                     android:layout_marginRight="15dp"
                     android:layout_weight="1"
-                    android:text="태그123123123"
                     android:padding="0dp" />
 
                 <TextView
@@ -239,7 +228,6 @@
                     android:layout_marginLeft="15dp"
                     android:layout_marginRight="15dp"
                     android:layout_weight="1"
-                    android:text="태그"
                     android:padding="0dp" />
 
             </LinearLayout>
