--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         <ImageButton
             android:id="@+id/btnWeather"
             android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:layout_height="match_parent"
             android:background="#00ff0000"
             android:padding="0dp"
             android:scaleType="centerCrop"
@@ -25,7 +25,7 @@
         <TextView
             android:id="@+id/textTemp"
             android:layout_width="290dp"
-            android:layout_height="70dp"
+            android:layout_height="match_parent"
             android:text="12°"
             android:textSize="40dp" />
 
@@ -70,19 +70,32 @@
         <ImageButton
             android:id="@+id/btnSort"
             android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_height="match_parent"
             android:background="#00ff0000"
             android:padding="10dp"
             android:scaleType="centerCrop"
             android:src="@drawable/sort" />
+
         <ImageButton
-            android:id="@+id/btnSearch"
+            android:id="@+id/btnModify"
             android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_height="match_parent"
             android:background="#00ff0000"
             android:padding="10dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/search" />
+            android:src="@drawable/modify" />
+
+
+        <androidx.appcompat.widget.SearchView
+            android:id="@+id/btnSearch"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:focusable="true"
+            app:searchIcon="@drawable/search"
+            app:iconifiedByDefault="true"
+            android:layoutDirection="rtl"
+            app:queryHint="검색어를 입력하세요" />
+
     </LinearLayout>
 
     <View
