--- a/app/src/main/res/layout/post.xml
+++ b/app/src/main/res/layout/post.xml
@@ -21,13 +21,13 @@
             android:layout_height="40dp"
             android:text="옷등록"/>
 
-        <ImageView
+        <ImageButton
             android:id="@+id/c_img_post"
             android:layout_marginTop="20dp"
             android:layout_width="160dp"
             android:layout_height="160dp"
             android:layout_gravity="center"
-            android:background="@drawable/clothes" />
+            android:background="@drawable/clothes"/>
 
         <TextView
             android:layout_marginTop="10dp"
@@ -116,6 +116,71 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="100dp"
+            android:layout_height="50dp" >
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="태그"
+                android:textAlignment="center"
+                android:layout_marginTop="15dp"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="350dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center">
+
+            <CheckBox
+                android:id="@+id/weatherSelect_spring"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:button="@null"
+                android:text="봄"
+                android:textAlignment="center"
+                android:background="#f1f3f5" />
+
+            <CheckBox
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:button="@null"
+                android:text="여름"
+                android:textAlignment="center"
+                android:background="#f1f3f5"
+                android:id="@+id/weatherSelect_summer"/>
+
+            <CheckBox
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="가을"
+                android:layout_weight="1"
+                android:button="@null"
+                android:textAlignment="center"
+                android:background="#f1f3f5"
+                android:id="@+id/weatherSelect_fall" />
+
+            <CheckBox
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="겨울"
+                android:layout_weight="1"
+                android:button="@null"
+                android:textAlignment="center"
+                android:background="#f1f3f5"
+                android:id="@+id/weatherSelect_winter" />
+
+            <CheckBox
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="전체"
+                android:layout_weight="1"
+                android:button="@null"
+                android:textAlignment="center"
+                android:background="#f1f3f5"
+                android:id="@+id/weatherSelect_communal"/>
         </LinearLayout>
 
         <TextView
