--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -256,6 +256,12 @@
             android:text="메모"
             android:textSize="18dp"
             android:layout_marginBottom="8dp"/>
+        <TextView
+            android:layout_marginTop="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:text="등록 날짜"
+            android:textSize="20dp" />
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -264,16 +270,5 @@
             android:text="날짜"
             android:textSize="18dp"
             android:layout_marginBottom="8dp"/>
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/detail_c_stack"
-            android:enabled="false"
-            android:text="스택"
-            android:textSize="18dp"
-            android:layout_marginBottom="8dp"/>
-
-
     </LinearLayout>
-
 </ScrollView>
