--- a/app/src/main/res/layout/tab_sort_closet.xml
+++ b/app/src/main/res/layout/tab_sort_closet.xml
@@ -9,23 +9,36 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp" >
-
+        android:layout_height="40dp" >
         <TextView
-            android:layout_width="350dp"
-            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="7"
             android:text="정렬"
             android:textSize="20dp"
+            android:layout_marginTop="5dp"
             android:layout_marginLeft="15dp"
             android:layout_gravity="center"
             android:textStyle="bold" />
 
+        <Button
+            android:id="@+id/tag_refresh"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="#00ff0000"
+            android:layout_weight="1"
+            android:layout_gravity="center"
+            android:layout_marginTop="3dp"
+            android:textAlignment="center"
+            android:textSize="18dp"
+            android:text="↻초기화" />
+
         <ImageButton
             android:id="@+id/tabsortClose"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:layout_gravity="right"
-            android:padding="50dp"
             android:src="@drawable/xmark"
             android:background="#00ff0000"/>
     </LinearLayout>
@@ -43,6 +56,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1.5"
             android:text="모두선택"
+            android:checked="true"
             android:id="@+id/clothesSelect_all" />
     </LinearLayout>
 
@@ -54,6 +68,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="의류"
+            android:checked="true"
             android:layout_weight="1"
             android:layout_marginLeft="17dp"
             android:id="@+id/clothesSelect_all_clothes"/>
@@ -68,6 +83,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="상의"
+            android:checked="true"
             android:layout_weight="1"
             android:id="@+id/clothesSelect_top"/>
 
@@ -75,6 +91,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="하의"
+            android:checked="true"
             android:layout_weight="1"
             android:id="@+id/clothesSelect_bottom"/>
 
@@ -82,6 +99,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="아우터"
+            android:checked="true"
             android:layout_weight="1"
             android:id="@+id/clothesSelect_outer"/>
     </LinearLayout>
@@ -105,6 +123,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="신발"
+            android:checked="true"
             android:layout_weight="1"
             android:id="@+id/clothesSelect_shoes"/>
 
@@ -112,6 +131,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="속옷"
+            android:checked="true"
             android:layout_weight="1"
             android:id="@+id/clothesSelect_under"/>
 
@@ -119,6 +139,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="양말"
+            android:checked="true"
             android:layout_weight="1"
             android:id="@+id/clothesSelect_socks"/>
 
@@ -130,12 +151,14 @@
         android:layout_height="40dp" >
 
         <CheckBox
+            android:id="@+id/clothesSelect_all_access"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="악세사리"
-            android:layout_weight="1"
             android:layout_marginLeft="17dp"
-            android:id="@+id/clothesSelect_all_access"/>
+            android:layout_weight="1"
+            android:text="악세사리"
+            android:checked="true"/>
+
         <View
             android:layout_width="1dp"
             android:layout_height="match_parent"
@@ -147,6 +170,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="모자"
+            android:checked="true"
             android:layout_weight="1"
             android:id="@+id/clothesSelect_hat"/>
 
@@ -154,6 +178,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="악세사리"
+            android:checked="true"
             android:layout_weight="1"
             android:id="@+id/clothesSelect_access"/>
 
@@ -161,6 +186,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="가방"
+            android:checked="true"
             android:layout_weight="1"
             android:id="@+id/clothesSelect_bag"/>
     </LinearLayout>
@@ -173,6 +199,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="기타"
+            android:checked="true"
             android:layout_weight="1"
             android:layout_marginLeft="17dp"
             android:id="@+id/clothesSelect_all_etc"/>
@@ -186,6 +213,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="세트"
+            android:checked="true"
             android:layout_weight="1"
             android:id="@+id/clothesSelect_set"/>
 
@@ -193,6 +221,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="기타"
+            android:checked="true"
             android:layout_weight="1"
             android:id="@+id/clothesSelect_etc"/>
 
@@ -200,6 +229,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="직접입력"
+            android:checked="true"
             android:layout_weight="1"
             android:id="@+id/clothesSelect_input"/>
     </LinearLayout>
@@ -211,14 +241,15 @@
         android:background="#aaa"/>
 
     <LinearLayout
-        android:layout_width="100dp"
+        android:layout_width="200dp"
         android:layout_height="50dp" >
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="태그"
             android:textAlignment="center"
-            android:layout_marginTop="15dp"/>
+            android:layout_marginTop="15dp"
+            android:layout_marginLeft="35dp" />
     </LinearLayout>
 
     <LinearLayout
@@ -233,6 +264,7 @@
             android:layout_weight="1"
             android:button="@null"
             android:text="봄"
+            android:checked="true"
             android:textAlignment="center"
             android:background="#f1f3f5" />
 
@@ -242,6 +274,7 @@
             android:layout_weight="1"
             android:button="@null"
             android:text="여름"
+            android:checked="true"
             android:textAlignment="center"
             android:background="#f1f3f5"
             android:id="@+id/weatherSelect_summer"/>
@@ -251,6 +284,7 @@
             android:layout_height="match_parent"
             android:text="가을"
             android:layout_weight="1"
+            android:checked="true"
             android:button="@null"
             android:textAlignment="center"
             android:background="#f1f3f5"
@@ -261,6 +295,7 @@
             android:layout_height="match_parent"
             android:text="겨울"
             android:layout_weight="1"
+            android:checked="true"
             android:button="@null"
             android:textAlignment="center"
             android:background="#f1f3f5"
@@ -270,6 +305,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="전체"
+            android:checked="true"
             android:layout_weight="1"
             android:button="@null"
             android:textAlignment="center"
@@ -288,7 +324,7 @@
         <CheckBox
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="이름순정렬"
+            android:text="시간순정렬"
             android:layout_weight="1"
             android:button="@null"
             android:textAlignment="center"
@@ -319,6 +355,7 @@
             android:layout_height="match_parent"
             android:layout_weight="0.3"/>
         <Button
+            android:id="@+id/sort_apply"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="10"
