--- a/app/src/main/res/layout/codyadd.xml
+++ b/app/src/main/res/layout/codyadd.xml
@@ -31,7 +31,7 @@
                 android:textAlignment="center"
                 android:textSize="30sp"
                 android:layout_width="315dp"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
                 android:text="코디등록"/>
 
         </LinearLayout>
@@ -220,6 +220,36 @@
                 android:text="가방" />
         </GridLayout>
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="코디 위치"
+            android:textSize="18dp"
+            android:padding="10dp"/>
+
+        <Spinner
+            android:id="@+id/cody_location"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="10dp"/>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="18dp"
+                android:text="코디명 "
+                android:padding="10dp"/>
+
+        </LinearLayout>
+        <EditText
+            android:id="@+id/codyadd_title"
+            android:layout_width="140dp"
+            android:layout_height="wrap_content"
+
+            />
         <LinearLayout
             android:layout_width="350dp"
             android:layout_height="30dp"
@@ -274,32 +304,6 @@
                 android:textAlignment="center"
                 android:background="#f1f3f5"
                 android:id="@+id/weatherSelect_communal"/>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_gravity="center">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="15dp"
-                android:text="코디명: "/>
-            <EditText
-                android:id="@+id/codyadd_title"
-                android:layout_width="140dp"
-                android:layout_height="wrap_content"
-                />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="코디 위치"
-                android:textSize="15dp" />
-
-            <Spinner
-                android:id="@+id/cody_location"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
         </LinearLayout>
         <Button
             android:layout_marginTop="20dp"
