--- a/app/src/main/res/layout/settings_service.xml
+++ b/app/src/main/res/layout/settings_service.xml
@@ -44,25 +44,66 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="디자인"
+                android:textSize="20dp"
+                android:textColor="@color/black"
+                android:background="#00ff0000"
+                android:paddingLeft="25dp"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginHorizontal="10dp"
+                android:background="#aaa"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                android:background="#00ff0000"
+                android:gravity="left|center"
+                android:textColor="@color/black"
+                android:textSize="17dp"
+                android:paddingLeft="20dp"
+                android:text="옷장 관련: dksisori@naver.com" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                android:background="#00ff0000"
+                android:gravity="left|center"
+                android:textColor="@color/black"
+                android:textSize="17dp"
+                android:paddingLeft="20dp"
+                android:text="코디 관련: sean7890@naver.com" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
                 android:background="#00ff0000"
                 android:gravity="left|center"
-                android:textColor="@color/black"
-                android:textSize="17dp"
                 android:paddingLeft="20dp"
-                android:text="옷장 디자인 관련 : ksisori@naver.com" />
-            <TextView
+                android:text="기타 디자인 관련 : juyoungck@naver.com"
+                android:textColor="@color/black"
+                android:textSize="17dp" />
+            <View
                 android:layout_width="match_parent"
-                android:layout_height="70dp"
-                android:background="#00ff0000"
-                android:gravity="left|center"
+                android:layout_height="1dp"
+                android:layout_marginHorizontal="10dp"
+                android:background="#aaa"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="기능"
+                android:textSize="20dp"
                 android:textColor="@color/black"
-                android:textSize="17dp"
-                android:paddingLeft="20dp"
-                android:text="코디 디자인 관련 : sean7890@naver.com" />
+                android:background="#00ff0000"
+                android:paddingLeft="25dp"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginHorizontal="10dp"
+                android:background="#aaa"/>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
